--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/kdl_parser
-	previous = 
-	base = 99afafc7d74c
+	previous = 99afafc7d74c
+	base = 887973f5a720
 	trim = 
 	trimbase = 
