--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/kdl_parser
+	parent = release/rolling/kdl_parser/2.11.0-2
 	previous = 99afafc7d74c
 	base = 7c753de244f6
 	trim = 
